add blog, log components to angular client

--- a/src/SaeedRezayi.AngularClient/src/app/blog/post-card/post-card.component.html
+++ b/src/SaeedRezayi.AngularClient/src/app/blog/post-card/post-card.component.html
@@ -1,12 +1,5 @@
-<!-- <div class="card">
-    <img class="card-img col-md-4 " src="../../../assets/blog-img-search.jpg" alt="">
-    <div class="card-body">
-      <h4 class="card-title">Title</h4>
-      <p class="card-text">Text</p>
-    </div>
-  </div> -->
-  
-<div class="card post-card">
+
+<!-- <div class="card post-card">
 
   <div class="card-header">
     <h4 class="card-title">{{model.title}}</h4>
@@ -24,7 +17,16 @@
 	Category: {{model.category}} Tags: {{model.tags}}
   </div>
 
+</div> -->
+
+<div class="card">
+  <img class="card-img-top" src="../../../assets/winter_natural.jpg" alt="Card image cap">
+  <div class="card-body">
+    <h4 class="card-title">Card title that wraps to a new line</h4>
+    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum hic officia animi quod iure, vel aliquam quia recusandae accusantium quo impedit labore, eligendi ipsam, fugit tempora, explicabo deleniti minus iste! </p>
+  </div>
 </div>
+
 <!-- 
 post comments:
 <div class="">
